--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "socket.io": "^2.0.4"
   },
   "scripts": {
-    "start": "mongod --dbpath data & node server.js"
+    "start": "node server.js"
   }
 }
